--- a/src/Postal.Tests/Postal.Tests.csproj
+++ b/src/Postal.Tests/Postal.Tests.csproj
@@ -36,11 +36,18 @@
     <AssemblyOriginatorKeyFile>..\Postal.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BoneSoft.CSS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bfd476863f28681e, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\BoneSoft.CSS.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.0.10827.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="RazorEngine, Version=3.0.7.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL" />
     <Reference Include="Should, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Should.1.1.12.0\lib\Should.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.3\lib\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,6 +62,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompiledRazorViewTests.cs" />
+    <Compile Include="CSSInlinerTests.cs" />
+    <Compile Include="CSSSourceTests.cs" />
     <Compile Include="EmailParserTests.cs" />
     <Compile Include="EmailServiceTests.cs" />
     <Compile Include="EmailTests.cs" />
@@ -72,6 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Test.css" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
