--- a/src/Postal.Tests/packages.config
+++ b/src/Postal.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Moq" version="4.0.10827" />
   <package id="Should" version="1.1.12.0" />
+  <package id="HtmlAgilityPack" version="1.4.3" />
 </packages>
