--- a/src/Postal/Postal.csproj
+++ b/src/Postal/Postal.csproj
@@ -40,6 +40,18 @@
     <AssemblyOriginatorKeyFile>..\Postal.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BoneSoft.CSS">
+      <HintPath>..\..\lib\BoneSoft.CSS.dll</HintPath>
+    </Reference>
+    <Reference Include="Fizzler">
+      <HintPath>..\..\lib\Fizzler.dll</HintPath>
+    </Reference>
+    <Reference Include="Fizzler.Systems.HtmlAgilityPack">
+      <HintPath>..\..\lib\Fizzler.Systems.HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.3\lib\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="RazorEngine, Version=3.0.7.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RazorEngine.3.0.7\lib\net40\RazorEngine.dll</HintPath>
@@ -63,6 +75,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompiledRazorView.cs" />
+    <Compile Include="CompiledRazorViewEngine.cs" />
+    <Compile Include="CSSInliner.cs" />
+    <Compile Include="CSSSource.cs" />
+    <Compile Include="ICSSInliner.cs" />
+    <Compile Include="InlineCSSEmailViewRenderer.cs" />
     <Compile Include="Email.cs" />
     <Compile Include="EmailHttpContext.cs" />
     <Compile Include="EmailHttpRequest.cs" />
@@ -77,10 +95,12 @@
     <Compile Include="IEmailService.cs" />
     <Compile Include="IEmailViewRenderer.cs" />
     <Compile Include="ImageEmbedder.cs" />
+    <Compile Include="Memoizer.cs" />
     <Compile Include="ParserUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceRazorView.cs" />
     <Compile Include="ResourceRazorViewEngine.cs" />
+    <Compile Include="RuleSetExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
